--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -5,7 +5,15 @@ $lightGreen: #b9e7e7;
 
 
 .app{
+    display: flex;
+    justify-content: center;
     .container{
+        width: 1024px;
+
+        .link{
+            text-decoration: none;
+            color: inherit;
+        }
         //Login & Register
         .auth{
             flex-direction: column;
@@ -47,6 +55,68 @@ $lightGreen: #b9e7e7;
                     text-align: center;
                      
                   }
+            }
+        }
+
+        //Navbar
+        .navbar{
+            .container{
+                padding: 10px 0px;
+                display: flex;
+                align-items: center;
+                justify-content:space-between ;
+                .logo{
+                    img{
+                        width: 120px;
+                    }
+                }
+                .links{
+                    display: flex;
+                    gap: 10px;
+                    align-items: center;
+
+                    h6{
+                        font-size: 16px;
+                        font-weight: 300;
+                    }
+
+                    span{
+                        cursor: pointer;
+                    }
+
+                    .write{
+                        background-color: $lightGreen;
+                        width: 50px;
+                        height: 50px;
+                        border-radius:50%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        font-weight: 300;
+                        border: 1px solid white;
+
+                        &:hover{
+                            
+                            color: teal;
+                            background-color: white;
+                            border: 1px solid teal;
+                        }
+                    }
+                }
+            }
+        }
+
+        footer{
+            margin-top: 100px;
+            padding: 20px;
+            background-color: $lightGreen;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 12px;
+
+            img{
+                height: 50px;
             }
         }
     }
