--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -119,5 +119,34 @@ $lightGreen: #b9e7e7;
                 height: 50px;
             }
         }
+
+        //HOME
+        .home{
+            .posts{
+                margin-top: 50px;
+                display: flex;
+                flex-direction: column;
+                gap: 150px;
+
+                .post{
+                    display: flex;
+                    gap: 100px;
+
+                    .img{
+                        flex:2;
+
+                        img{
+                            width: 100%;
+                            max-height: 400px;
+                            object-fit: cover;
+                        }
+                    }
+                    .content{
+                        flex: 3;
+                    }
+                }
+
+            }
+        }
     }
 }
